feat: Added dockerfile integration for zeta typescript support

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -5,9 +5,11 @@ RUN apt-get update && \
   apt-get -y upgrade && \
   apt-get install -y --no-install-recommends \
   gcc \
+  curl \
   build-essential &&\
   apt-get clean &&\
   rm -rf /var/lib/apt/lists/*
+
 
 # Upgrade pip and setuptools
 RUN pip install --no-cache-dir --upgrade pip setuptools
@@ -22,6 +24,10 @@ RUN groupadd -g 7777 crypto-quants &&\
 
 # Switch to the newly created user
 USER crypto-quants
+
+# Install Nodejs 
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash && \
+  bash -c "source $HOME/.nvm/nvm.sh && nvm install 22 && nvm alias default 22"
 
 # Copy requirements file and install Python dependencies
 COPY --chown=crypto-quants:crypto-quants requirements.txt /home/crypto-quants/requirements.txt
@@ -39,11 +45,13 @@ WORKDIR /home/crypto-quants/app
 COPY --chown=crypto-quants:crypto-quants . .
 
 # Ensure scripts are executable
-RUN chmod 554 /home/crypto-quants/app/deployment/*.sh
+RUN chmod +x /home/crypto-quants/app/deployment/*.sh
 
 # Update PATH environment variable
 ENV PATH="/home/crypto-quants/.local/bin:$PATH"
 
+# Install the npm packages for the crypto-quants USER
+RUN bash -c "source $HOME/.nvm/nvm.sh && deployment/install.sh"
+
 # Entry point for the container
 ENTRYPOINT ["./deployment/app.sh"]
-
