feat: filtered small positions - Fixes #22

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-fastapi
-python-dotenv
-driftpy
-gunicorn
-zetamarkets_py
-pythonjsonlogger
+fastapi==0.111.0
+python-dotenv==1.0.1
+driftpy==0.7.64
+gunicorn==22.0.0
+python-json-logger==2.0.7
