feat: make docker build runable
fixed python depency problem
fixed typescript npx not found issue
improve the dockerfile

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -6,10 +6,9 @@ RUN apt-get update && \
   apt-get install -y --no-install-recommends \
   gcc \
   curl \
-  build-essential &&\
-  apt-get clean &&\
+  build-essential && \
+  apt-get clean && \
   rm -rf /var/lib/apt/lists/*
-
 
 # Upgrade pip and setuptools
 RUN pip install --no-cache-dir --upgrade pip setuptools
@@ -19,15 +18,28 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
 # Add user and group
-RUN groupadd -g 7777 crypto-quants &&\
-  useradd -m -d /home/crypto-quants crypto-quants -s /bin/false -u 7777 -g crypto-quants
+RUN groupadd -g 7777 crypto-quants && \
+  useradd -m -d /home/crypto-quants crypto-quants -s /bin/bash -u 7777 -g crypto-quants
 
 # Switch to the newly created user
 USER crypto-quants
 
-# Install Nodejs 
+# Node Version
+ENV NVM_DIR /home/crypto-quants/.nvm
+ENV NODE_VERSION 22
+
+# Install Nodejs
 RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash && \
-  bash -c "source $HOME/.nvm/nvm.sh && nvm install 22 && nvm alias default 22"
+  . "$NVM_DIR/nvm.sh" && \
+  nvm install $NODE_VERSION && \
+  nvm use $NODE_VERSION && \
+  nvm alias default $NODE_VERSION && \
+  echo 'export NVM_DIR="$HOME/.nvm"' >> /home/crypto-quants/.bashrc && \
+  echo '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> /home/crypto-quants/.bashrc && \
+  echo 'export PATH="$NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH"' >> /home/crypto-quants/.bashrc
+
+# Add nvm to PATH
+ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
 # Copy requirements file and install Python dependencies
 COPY --chown=crypto-quants:crypto-quants requirements.txt /home/crypto-quants/requirements.txt
@@ -35,7 +47,7 @@ COPY --chown=crypto-quants:crypto-quants requirements.txt /home/crypto-quants/re
 # Install Python dependencies
 RUN pip install --no-cache-dir --upgrade -r /home/crypto-quants/requirements.txt
 
-# Install the zeta market pypi individually to resove the conflict
+# Install the zeta market pypi individually to resolve the conflict
 RUN pip install --no-cache-dir --upgrade zetamarkets_py
 
 # Create application directory
@@ -53,8 +65,6 @@ RUN chmod +x /home/crypto-quants/app/deployment/*.sh
 # Update PATH environment variable
 ENV PATH="/home/crypto-quants/.local/bin:$PATH"
 
-# Install the npm packages for the crypto-quants USER
-RUN bash -c "source $HOME/.nvm/nvm.sh && deployment/install.sh"
-
 # Entry point for the container
-ENTRYPOINT ["./deployment/app.sh"]
+ENTRYPOINT ["bash", "-c", "source /home/crypto-quants/.nvm/nvm.sh && ./deployment/app.sh"]
+
